# smartIntel

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  HACKATHON_IDEA.md  MCP_ANALYSIS.md  Makefile  QUICK_START_CHEATSHEET.md  README.md  pyproject.toml
.claude/agents/: prompt-engineer.md
.github/workflows/: ci.yml  production-gate.yml  staging-deploy.yml
config/: .env.example
data/demo/: README.md
docs/GUIDES/: CLOUD_OBJECT_STORAGE_SETUP.md  GITHUB_SETUP.md  WATSONX_CREDENTIALS_SETUP.md
docs/HANDOFF/: HACKATHON_MASTER_PLAN.md  VALTTERI_IMPLEMENTATION_REPORT.md
docs/RESEARCH/: DEPENDENCY_AUDIT.md  RESEARCH_FINDINGS_SUMMARY.md  WATSONX_ORCHESTRATE_INTELLIGENCE_REPORT.md
docs/SPECIFICATIONS/: ARCHITECTURE.md  PDF_EXTRACTION_PIPELINE.md
scripts/: deploy-production.py  deploy-staging.py  local-setup.sh  run-tests.sh  test_cos_connection.py  test_credentials.py  test_pdf_extraction_cos.py  upload_pdfs_to_cos.py
src/: __init__.py
src/agents/: __init__.py
src/integrations/: __init__.py
src/orchestration/: __init__.py
src/predictive/: __init__.py
src/utils/: __init__.py
tests/: __init__.py  test_smoke.py  test_watsonx_connection.py
